media-services/overseerr/overseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
  - name: web-ui
    port: 5055
