media-services/overseerr/overseerr-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr-route
  namespace: media # Where your application is deployed
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "overseerr.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: overseerr
      port: 5055
